assets/css/style.css
/*Google font import*/
@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

/*CSS variables*/
:root {
    --primary-font: Raleway, sans-serif;
    --secondary-font: "Montserrat Alternates", cursive;
    --highlight-color: #55CBD2; /* middle blue */
    --highlight-light-color: #C5FFF1; /* bright blue */
    --primary-color: #173753; /* dark blue */
    --secondary-color: #1B4353; /* charcoal */
}

/*Global styles*/
body {
    font-family: var(--primary-font);
    color: var(--primary-color);
}

h1, h2, h3 {
    font-family: var(--secondary-font);
    color: var(--secondary-color);
}

/*Buttons*/

.custom-button {
    background-color: var(--highlight-color);
    color: var(--primary-color); 
}

.custom-button:hover {
    background-color: var(--secondary-color);
    color: var(--highlight-light-color); 
    border: 1px solid var(--highlight-light-color);
}


/*Navbar styles*/
#navbar {
    background-color: var(--primary-color);
}


/*Header styles Home*/
#hero {
    background: url(../img/hero.jpg) 75% 35% var(--primary-color);
    min-height:500px;
    
}

#hero-quote {
    background-color: rgba(00,00,00,0.5);
}
#hero-quote h2 {
    color: white;
}

/*Section styles*/



/*Figure between About and Philosophy section*/
#cat-notebook {
    border-radius: 50%;
}

/*Testimonials section styles*/

#testimonials-carousel {
    background-color: var(--highlight-light-color);
}
#testimonials-carousel .carousel-item.active {
    padding: 1rem 5rem;
    min-height: 150px;
    
}

#testimonials-carousel .carousel-item.active, 
#testimonials-carousel .carousel-inner {
    display: flex;
    align-items: center;
    color: var(--primary-color);
    text-align: center;
}

/*What I offer page styles*/
#offer .card {
    margin-bottom: 1.5rem;
}

#offer .card-footer {
    background-color: var(--highlight-light-color);
    margin-bottom:0;
}

/*Book page styles*/

/*color of option choices and prefilled "Select" in the form*/
form option, form .form-select {
    color: var(--primary-color);
    }

/*Footer styles*/
#contact {
    background-color: var(--primary-color);
}

#contact * {
    color: white;
}

#social-links i:hover {
    color: var(--highlight-color);
}

/*media queries*/
/*Max Mobile L screen, reduce padding in testimonial carousel as it gets cramped*/
@media screen and (max-width: 426px) {
    #testimonials-carousel .carousel-item.active {
        padding: 1rem 3rem;
}
}
/*Max Mobile M screen, reduce padding in testimonial carousel as it gets cramped, larger min-height to keep all reviews on same height*/

@media screen and (max-width: 376px) {
    #testimonials-carousel .carousel-item.active {
        padding: 1rem 1.5rem;
        min-height: 168px;
}
}
/*Max Mobile S screen, reduce padding in testimonial carousel as it gets cramped*/

@media screen and (max-width: 320px) {
    #testimonials-carousel .carousel-item.active {
        padding: 1rem 1.2rem;
}
}

/*Card text in What I offer needs to have different heights depending on screen size to make all cards the same height */

/*Card text min height for screens between 768 and 991px*/
@media screen and (min-width: 768px) {
    #offer .card-text {
        min-height: 120px;
}
}
/*Card text min height for screens between 992 and 1199px, the card footer needs to have more height than other screen sizes to be equal for all*/
@media screen and (min-width: 992px) {
    #offer .card-text {
        min-height: 192px;
}
    #offer .card-footer {
        min-height: 89px;
    }
}
/*Card text min height for screens between 1200 and 1399px, fix card footer back to auto length as they are all the same height*/
@media screen and (min-width: 1200px) {
    #offer .card-text {
        min-height: 144px;
}
    #offer .card-footer {
        min-height: auto;
}
}
/*Card text min height for screens 1400px and up*/
@media screen and (min-width: 1400px) {
    #offer .card-text {
        min-height: 120px;
}
}

